# turkicnlp

./: CITATION.cff  MANIFEST.in  README.md  build.sh  pypi_release.sh  pyproject.toml  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: test-installation.yml
scripts/: add_high_priority_lexicon.py  add_low_priority_lexicon.py  add_medium_priority_lexicon.py  build_and_publish.sh  extract_mwt_rules.py
turkicnlp/: __init__.py  language_id.py  pipeline.py
turkicnlp/models/: __init__.py  document.py
turkicnlp/processors/: __init__.py  base.py  dep_parser.py  embeddings.py  lemmatizer.py  morpheme_tokenizer.py  morphology.py  multilingual_backend.py  multilingual_model.py  multilingual_morph_backend.py  multilingual_morph_model.py  mwt.py  ner.py  pos_tagger.py  sentiment.py  stanza_backend.py  tokenizer.py  tokenizer_arabic.py  translate.py
turkicnlp/resources/: __init__.py  catalog.json  downloader.py  morpheme_rules.json  nllb_flores200_languages.json  registry.py
turkicnlp/resources/lexicons/: README.md  alt.json  azb.json  aze.json  bak.json  chv.json  crh.json  gag.json  kaa.json  kaz.json  kir.json  kjh.json  krc.json  kum.json  nog.json  sah.json  tat.json  tuk.json  tur.json  tyv.json  uig.json  uzb.json
turkicnlp/resources/mwt_rules/: azb.json  gag.json  kaz.json  tyv.json
turkicnlp/resources/mwt_rules_extracted/: kaz.json  kir.json  ota.json  tur.json
turkicnlp/resources/tag_mappings/: __init__.py  alt.py  azb.py  aze.py  bak.py  base.py  chv.py  crh.py  gag.py  kaa.py  kaz.py  kir.py  kjh.py  krc.py  kum.py  nog.py  sah.py  tat.py  tuk.py  tur.py  turkic_common.py  tyv.py  uig.py  uzb.py
turkicnlp/scripts/: __init__.py  detector.py  transliterator.py
turkicnlp/tests/: __init__.py  test_conllu.py  test_document.py  test_embeddings.py  test_morph_neural.py  test_morpheme_tokenizer.py  test_morphology.py  test_mwt.py  test_pipeline.py  test_registry.py  test_script_detector.py  test_scripts.py  test_stanza_backend.py  test_tag_mappings.py  test_tokenizer.py  test_translate.py  test_transliterator.py
turkicnlp/tests/fixtures/: kaz_cyrl_sample.txt  kaz_latn_sample.txt  tur_latn_sample.txt  uig_arab_sample.txt  uzb_mixed_sample.txt
turkicnlp/training/: __init__.py  evaluate.py  train_ner.py  train_parser.py  train_pos.py  train_tokenizer.py
turkicnlp/utils/: __init__.py  conllu.py  unicode_utils.py
