[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turkicnlp"
version = "0.1.3"
description = "NLP toolkit for 20+ Turkic languages"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "Sherzod Hakimov", email = "sherzodhakimov@gmail.com"},
]
keywords = [
    "nlp", "toolkit", "turkic", "kazakh", "turkish", "turkmen", "uzbek", "azerbaijani",
    "kyrgyz", "tatar", "uyghur", "stanza", "linguistics",
    "morphology", "pos-tagging", "dependency-parsing", "ner", "machine-translation", "embeddings"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: Turkish"
]

dependencies = [
    "numpy>=1.24",
    "hfst>=3.16"
]

[project.optional-dependencies]
stanza = [
    "stanza>=1.8",
]
embeddings = [
    "torch>=2.0",
    "transformers>=4.30",
    "tokenizers>=0.13",
]
translation = [
    "torch>=2.0",
    "transformers>=4.30",
    "tokenizers>=0.13",
]
nllb = [
    "torch>=2.0",
    "transformers>=4.30",
    "tokenizers>=0.13",
]
all = [
    "stanza>=1.8",
    "torch>=2.0",
    "transformers>=4.30",
    "tokenizers>=0.13"
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/turkic-nlp/turkicnlp"
Documentation = "https://turkic-nlp.github.io/toolkit"
Repository = "https://github.com/turkic-nlp/turkicnlp"
Issues = "https://github.com/turkic-nlp/turkicnlp/issues"

[tool.setuptools.packages.find]
include = ["turkicnlp*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
turkicnlp = [
    "resources/*.json",
    "resources/lexicons/*.json",
    "resources/mwt_rules/*.json",
    "resources/mwt_rules_extracted/*.json",
    "resources/tag_mappings/*.json",
]

[tool.pytest.ini_options]
testpaths = ["turkicnlp/tests"]
markers = [
    "slow: marks tests that require model downloads",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.black]
line-length = 100
target-version = ["py39"]
